Fixed Pokémon Card display issue on mobile.

--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ nav {
   height: 500px;
   flex: 0 0 auto;
 }
-.poke-card-search-wrapper {
+.poke-card-search {
   text-align: center;
   background-color: #121212;
   border-radius: 10px;
@@ -302,14 +302,8 @@ nav {
     position: relative;
     flex: 1;
   }
-  .poke-card-search-wrapper {
-    color: white;
-    margin: auto;
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-  }
-  .poke-card-search-wrapper {
+
+  .poke-card-search {
     display: flex;
     text-align: center;
     border-radius: 10px;
